Updated header to include studyLevel and degreeCode

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,3 +1,11 @@
 .header {
-	border: 1px solid black;
+	background: #323232;
+	// border: 1px solid black;
+	font-family: $text;
+	color: white;
+	padding: 2em;
+	h1 {
+		font-weight: 600;
+		font-size: 48px;
+	}
 }
